--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ESNext"
+        "target": "ESNext",
+        "watch": true
     },
     "exclude": [
         "node_modules"
