--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "ESNext",
-        "watch": true
+        "target": "ESNext"
     },
     "exclude": [
         "node_modules"
